# UTMDashboard

./: CMakeLists.txt  README.md  main.cpp  utms.json  web_utm.cpp  web_utm.hpp
.github/workflows/: build-deb.yml
configuration/: cfg.json
src/: main.cpp  utm_dashboard.cpp  utm_dashboard.hpp
systemd/: utm-dashboard.service
